# ai-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  celerybeat-schedule  pyproject.toml  render.yaml  requirements.txt
backend/GoogleAuth/: models.py  urls.py  utils.py  views.py
backend/GoogleAuth/migrations/: 0001_initial.py  0002_googlecredential_email.py  0003_googlecredential_latest_history_id.py
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_achievement_userachievement.py  0003_user_telegram_id.py
backend/backend/: .env  celery.py  settings.py  urls.py
backend/chats/: .env  models.py  serializers.py  urls.py  utils.py  views.py
backend/chats/migrations/: 0001_initial.py  0002_alter_conversation_user.py
backend/jobs/: models.py  tasks.py
backend/jobs/migrations/: 0001_initial.py
backend/live_assistance/: apps.py  urls.py  views.py
backend/tasks/: models.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_task_completion_date.py  0003_task_streak_dates.py  0004_task_embedding_task_task_embedding_index.py
backend/telegram_integration/: models.py  urls.py  utils.py  views.py
backend/telegram_integration/migrations/: 0001_initial.py
backend/tools/: calendar_tools.py  core_utils.py  embeddings.py  gmail_tools.py  in_house_tools.py  openai_runner.py  tool_registry.py
backend/tools/google_docs/: helpers.py  structures.py  tables.py  tools.py
backend/tools/google_drive/: helpers.py  tools.py
(+46 files in other folders)
