[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "bs4>=0.0.2",
    "celery>=5.5.3",
    "dj-database-url>=3.0.1",
    "django>=4.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mcp>=1.16.0",
    "openai>=2.0.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=7.0.0",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]

